@@ -1,3 +1,5 @@
+* BUGFIX: Added interface for KSI_Header KSI context getter.
+
 Version 3.14
 
 2017-04-17 release(3.13.2043)
